force-app/main/default/objects/IERRelatedList__c/IERRelatedList__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom settings is for the IER Related List Visualforce Page</description>
    <label>IER Related List</label>
</CustomObject>