force-app/main/default/objects/IERRelatedList__c/fields/Endpoint_Auth__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Auth__c</fullName>
    <label>Endpoint Auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>