force-app/main/default/objects/IERRelatedList__c/fields/Endpoint_SOAP__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_SOAP__c</fullName>
    <label>Endpoint SOAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>