force-app/main/default/objects/IERRelatedList__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>