force-app/main/default/objects/IERRelatedList__c/fields/Show_IER_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Show_IER_Related_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show IER Related List</label>
    <type>Checkbox</type>
</CustomField>